# gatherers

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  config.toml  index.md
crates/core/: Cargo.toml
crates/core/src/: directories.rs  lib.rs  tasks.rs  tests.rs
crates/core/src/downloaders/: downloadable.rs  errors.rs  mod.rs
crates/core/src/downloaders/batch/: mod.rs  multi_threaded.rs  sequential.rs
crates/core/src/downloaders/file/: in_memory.rs  mod.rs  streaming.rs
crates/core/src/gatherers/: errors.rs  mod.rs  modifiers.rs  structs.rs
crates/core/src/http/: cookies.rs  errors.rs  macros.rs  mod.rs  request.rs  response.rs
crates/fansly/: Cargo.toml
crates/fansly/src/: constants.rs  gatherer.rs  lib.rs  responses.rs
crates/fansly/src/structs/: account.rs  media.rs  media_bundle.rs  message.rs  mod.rs  post.rs  story.rs  subscription.rs  transaction.rs
crates/gatherer-cli/: Cargo.toml
crates/gatherer-cli/src/: main.rs
crates/gatherer-cli/src/cli/: errors.rs  mod.rs
crates/gatherer-cli/src/config/: mod.rs
crates/gatherer-core/: Cargo.toml
crates/gatherer-core/src/: errors.rs  lib.rs
crates/gatherer-core/src/config/: mod.rs
crates/gatherer-core/src/downloaders/: downloadable.rs  errors.rs  mod.rs  multi_threaded.rs  sequential.rs
crates/gatherer-core/src/gatherers/: errors.rs  mod.rs  type.rs
crates/gatherer-core/src/http/: errors.rs  mod.rs
crates/gatherer-fansly/: Cargo.toml
crates/gatherer-fansly/src/: gatherer.rs  lib.rs  responses.rs  responses_test.rs
crates/gatherer-fansly/src/structs/: account.rs  media.rs  media_bundle.rs  mod.rs  post.rs  story.rs  subscription.rs
crates/gatherer-onlyfans/: Cargo.toml
crates/gatherer-onlyfans/src/: lib.rs  responses.rs  structs.rs
crates/gatherers/: Cargo.toml
crates/gatherers/src/: cli.rs  cli_tasks.rs  config.rs  macros.rs  main.rs
crates/onlyfans/: Cargo.toml
crates/onlyfans/src/: builder.rs  constants.rs  gatherer.rs  gatherers.rs  lib.rs  responses.rs  structs.rs
docs/: README.md  concepts.md  readme.md
docs/flows/: cli.md
src/: cli.rs  cli_tasks.rs  config.rs  main.rs
src/config/: errors.rs  mod.rs
src/directories/: mod.rs
src/docs/: README.md
src/downloaders/: mod.rs
src/gatherers/: errors.rs  mod.rs
src/gatherers/fansly/: mod.rs  responses.rs  structs.rs
src/gatherers/fansly/examples/: account.json  config.json  group.json  post.json  subscriptions.json
src/gatherers/onlyfans/: mod.rs  responses.rs  structs.rs
src/http/: errors.rs  mod.rs
