[package]
edition = "2018"
name    = "gatherers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cfg-rs      = "0.2"
chrono      = "0.4"
directories = "3.0"
fern        = "0.6"
log         = "0.4"
reqwest     = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
tabled      = "0.3"
thiserror   = "1.0"
tokio       = { version = "1.10", features = ["full"] }
toml        = "0.5"
url         = "2.2"
