[package]
edition = "2021"
name    = "gatherers"
version = "0.1.0"

[dependencies]
async-channel       = "1.6"
async-task          = "4.2"
clap                = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
eyre                = "0.6"
fern                = "0.6"
futures             = "0.3"
gatherer-core       = { path = "crates/core" }
gatherer-fansly     = { path = "crates/fansly" }
gatherer-onlyfans   = { path = "crates/onlyfans" }
log                 = "0.4"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
tokio               = { version = "1.19", features = ["full"] }
toml                = "0.7"

[features]
default  = ["fansly", "onlyfans"]
fansly   = []
onlyfans = []

[workspace]
members = [
    "crates/core",
    "crates/onlyfans",
    "crates/fansly"
]
