[package]
edition = "2021"
name = "gatherer-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-channel = "1.6"
async-fs = "1.5"
async-io = "1.6"
async-task = "4.0"
async-trait = "0.1"
chrono = "0.4"
directories = "4.0"
flume = "0.10"
futures = "0.3"
indicatif = "0.17.0-beta.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0"
url = "2.2"
regex = "1.5"
