[package]
edition = "2021"
name    = "gatherer-fansly"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait   = "0.1"
chrono        = "0.4"
gatherer-core = { path = "../core" }
log           = "0.4"
serde         = { version = "1.0", features = ["derive"] }
