[package]
edition = "2018"
name    = "gatherer-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel      = "1.6"
async-task         = "4.0"
# crossbeam-channel  = "*"
fern               = "0.6"
flume              = "*"
futures            = "0.3"
gatherer-core      = { path = "../gatherer-core" }
gatherer-fansly    = { path = "../gatherer-fansly" }
gatherer-onlyfans  = { path = "../gatherer-onlyfans" }
serde              = { version = "1.0", features = ["derive"] }
smol               = "1.2"
structopt          = "0.3"
thiserror          = "1.0"
toml               = "0.5"
tracing            = "0.1"
tracing-subscriber = "0.2"

[features]
default  = ["fansly", "onlyfans"]
fansly   = []
onlyfans = []
