[package]
edition = "2018"
name    = "gatherer-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-channel = "1.6"
async-trait = "0.1"
chrono      = "0.4"
directories = "4.0"
reqwest     = { version = "0.11", features = ["rustls-tls", "json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tabled      = "0.3"
thiserror   = "1.0"
tokio       = { version = "1.10", features = ["full"] }
tracing     = "0.1"
url         = "2.2"
