[package]
edition = "2018"
name    = "gatherer-onlyfans"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait   = "0.1"
chrono        = "0.4"
gatherer-core = { path = "../gatherer-core" }
serde         = { version = "1.0", features = ["derive"] }
tracing       = "0.1"
